# pytest-embedded-arduino-cli

./: .gitignore  CHANGELOG.md  README.ja.md  README.md  SPEC.ja.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: .env.example  README.ja.md  README.md  pytest.ini
examples/01_basic/: README.ja.md  README.md
examples/01_basic/basic/: sketch.yaml  test_basic.py
examples/02_env_define/: README.ja.md  README.md
examples/02_env_define/wifi_env_define/: sketch.yaml  test_env_define.py  wifi_env_define.ino
examples/03_dut_input/: README.ja.md  README.md
examples/03_dut_input/serial_dut_input/: serial_dut_input.ino  sketch.yaml  test_dut_input.py
examples/04_nvs_persistent/: README.ja.md  README.md
examples/04_nvs_persistent/nvs_persistent/: test_nvs_persistent.py
examples/04_unity_basic/: README.ja.md  README.md
examples/04_unity_basic/unity_basic/: test_unity_basic.py  unity_basic.ino
examples/05_erase_flash/: README.ja.md  README.md
examples/05_nvs_persistent/: README.ja.md  README.md
examples/06_arduino_library_project/: README.ja.md  README.md
examples/06_erase_flash/: README.ja.md  README.md
examples/07_arduino_library_project/: README.ja.md  README.md
examples/08_arduino_ide_project/: README.ja.md  README.md
examples/basic/: basic.ino  sketch.yaml
examples/wifi/: build_config.toml  sketch.yaml  test_wifi.py
src/pytest_embedded_arduino_cli/: __init__.py  app.py  flasher.py  plugin.py  serial.py
tests/: test_app.py  test_flasher.py  test_plugin.py
tools/: prepare_release.py
(+34 files in other folders)
